# IndexSDK

./: .codespellrc  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  README_en.md  Third_Party_Open_Source_Software_Notice  requirement.txt
feature_retrieval/opensource/AscendCLMock/acl/: CMakeLists.txt  acl.cpp  acl.h  acl_base.h  acl_mdl.cpp  acl_mdl.h  acl_op.h  acl_op_compiler.cpp  acl_op_compiler.h  acl_rt.h
feature_retrieval/src/ascendfaiss/: CMakeLists.txt  build.sh
feature_retrieval/src/ascendfaiss/ascend/: AscendCloner.cpp  AscendCloner.h  AscendClonerOptions.cpp  AscendClonerOptions.h  AscendIndex.cpp  AscendIndex.h  AscendIndexFlat.cpp  AscendIndexFlat.h  AscendIndexIVF.cpp  AscendIndexIVF.h  AscendIndexIVFFlat.cpp  AscendIndexIVFFlat.h  AscendIndexIVFPQ.cpp  AscendIndexIVFPQ.h  AscendIndexIVFRaBitQ.cpp  AscendIndexIVFRaBitQ.h  AscendIndexIVFRabitQ.cpp  AscendIndexIVFRabitQ.h  AscendIndexIVFSQ.cpp  AscendIndexIVFSQ.h  AscendIndexInt8.cpp  AscendIndexInt8.h  AscendIndexInt8Flat.cpp  AscendIndexInt8Flat.h  AscendIndexQuantizerImpl.h  AscendIndexSQ.cpp  AscendIndexSQ.h  AscendMultiIndexSearch.cpp  AscendMultiIndexSearch.h  AscendNNInference.cpp  AscendNNInference.h  IndexImplBase.h
feature_retrieval/src/ascendfaiss/ascenddaemon/: AscendResourcesProxy.h  StandardAscendResources.cpp  StandardAscendResources.h  ThreadSafeStandardAscendResources.cpp  ThreadSafeStandardAscendResources.h
feature_retrieval/src/ascendfaiss/ascenddevice/: CMakeLists.txt
feature_retrieval/src/ascendfaiss/ascendhost/: CMakeLists.txt
feature_retrieval/src/ascendfaiss/cmake/: AscendRelease.cmake  AscendToolchain.cmake
feature_retrieval/src/ascendfaiss/common/: AscendFp16.h  Constants.h  ErrorCode.h  IndexParam.h
feature_retrieval/src/ascendfaiss/ops/: CMakeLists.txt  build.sh
feature_retrieval/src/ascendfaiss/script/: uninstall.sh
feature_retrieval/src/ascendfaiss/test/: CMakeLists.txt
feature_retrieval/src/ascendfaiss/tools/: addgraph_generate_model.py  aicpu_generate_model.py  ascendc_ivfpq_search_distance_generate_model.py  ascendc_ivfpq_search_distance_ip_generate_model.py  ascendc_ivfpq_search_distance_l2_generate_model.py  ascendc_ivfpq_subspace_distance_generate_model.py  binary_flat_generate_model.py  cagra_generate_model.py  common.py  flat_at_generate_model.py  flat_at_int8_generate_model.py  flat_generate_model.py  int8flat_generate_model.py  ivfflat_generate_model.py  ivfpq_generate_model.py  ivfrabitq_generate_model.py  ivfsq8_generate_model.py  ivfsqt_generate_model.py  mask_generate_model.py  para_table.xml  run_generate_model.py  sq8_generate_model.py
feature_retrieval/src/ascendfaiss/train/: graph_build.py
feature_retrieval/src/ascendfaiss/ut/: CMakeLists.txt  Common.cpp  Common.h  TestAscendIndexILFlatUT.cpp  TestAscendIndexUTBinaryFlat.cpp  TestAscendIndexUTCagra.cpp  TestAscendIndexUTCluster.cpp  TestAscendIndexUTClustering.cpp  TestAscendIndexUTFlatAT.cpp  TestAscendIndexUTILFlat.cpp  TestAscendIndexUTIVFPQ.cpp  TestAscendIndexUTIVFRabitQ.cpp  TestAscendIndexUTIVFSQ.cpp  TestAscendIndexUTIVFSQT.cpp  TestAscendIndexUTInt8.cpp  TestAscendIndexUTSQ.cpp  TestAscendIndexUTTS.cpp
ivfsp_impl/ascendfaiss/: CMakeLists.txt  Makefile  Makefile-device  ascend_depend  autogen.sh  build.sh  build_op.sh  cmake_ivfsp.sh  config.status  depend  makefile.inc.in
ivfsp_impl/ascendfaiss/ascend/: AscendMultiIndexSearch.cpp  AscendMultiIndexSearch.h
ivfsp_impl/ascendfaiss/ascend/custom/: AscendIndexIVFSPSQ.cpp  AscendIndexIVFSPSQ.h
ivfsp_impl/ascendfaiss/ascend/rpc/: AscendRpcIndexIVFSPSQ.h
ivfsp_impl/ascendfaiss/ascenddaemon/: IVFSPCodeBookTrainer.cpp  IVFSPCodeBookTrainer.h
ivfsp_impl/ascendfaiss/ascenddaemon/impl_custom/: IndexIVFSPSQ.cpp  IndexIVFSPSQ.h  IndexIVFSPSQL2.cpp  IndexIVFSPSQL2.h
ivfsp_impl/ascendfaiss/ascendhost/: CMakeLists.txt
ivfsp_impl/ascendfaiss/cmake/: AscendRelease.cmake  utils.cmake
ivfsp_impl/ascendfaiss/test/: common.h
ivfsp_impl/ascendfaiss/test/ascendhost/: CMakeLists.txt  cmake_test.sh  set_env.sh
ivfsp_impl/ascendfaiss/tools/: common.py  para_table.xml  spsq_generate_model.py
ivfsp_impl/ascendfaiss/train/: readme.md  train.sh
ivfsp_impl/ascendfaiss/ut/: CMakeLists.txt  TestAscendIndexIVFSP_EdgeCases.cpp  TestAscendIndexIVFSP_NormalCases.cpp  Utils.h  ci_run.sh
ivfsp_utils/src/ascend/: AscendIndex.cpp  AscendIndex.h  AscendIndexQuantizerImpl.h  AscendMultiIndexSearch.cpp  AscendMultiIndexSearch.h  CMakeLists.txt
ivfsp_utils/src/ascend/impl/: AscendIndexImpl.cpp  AscendIndexImpl.h
ivfsp_utils/src/ascenddaemon/: AscendResourcesProxy.h  CMakeLists.txt  StandardAscendResources.cpp  StandardAscendResources.h
ivfsp_utils/src/ascendhost/: CMakeLists.txt
ivfsp_utils/src/ops/: CMakeLists.txt
reference/: CMakeLists.txt  README.md  TestAscendIReduction.cpp  TestAscendIndexBinaryFlat.cpp  TestAscendIndexCluster.cpp  TestAscendIndexFlat.cpp  TestAscendIndexILFlat.cpp  TestAscendIndexIVFFlat.cpp  TestAscendIndexIVFSQ.cpp  TestAscendIndexIVFSQT.cpp  TestAscendIndexIVFSQTwithCpuFlat.cpp  TestAscendIndexInt8Flat.cpp  TestAscendIndexInt8FlatWithCPU.cpp  TestAscendIndexInt8FlatWithSQ.cpp  TestAscendIndexSQ.cpp  TestAscendIndexSQMulPerformance.cpp  TestAscendIndexTS.cpp  TestAscendIndexTS_int8Cos.cpp  TestAscendIndexVStar.cpp  TestAscendMultiSearch.cpp  build.sh
vsa_hpp/src/ock/: CMakeLists.txt
vstar_great_impl/DiskIndex/: CMakeLists.txt  README.md
vstar_great_impl/DiskIndex/include/: CommonIncludes.h  DiskAssert.h  DiskException.h  FixedChunkPQTable.h  MathUtils.h  SecFuncUtils.h  Utils.h
vstar_great_impl/DiskIndex/src/: CMakeLists.txt  FixedChunkPQTable.cpp  MathUtils.cpp
vstar_great_impl/mix-index/: CMakeLists.txt  allRun.sh  build.sh  publish_union.sh  run.sh
vstar_great_impl/mix-index/READMEs/: indexGreat_GMode_README.md  indexGreat_README.md  indexVstar_README.md
vstar_great_impl/mix-index/beta/: CMakeLists.txt  buildAllThree.sh
vstar_great_impl/mix-index/union/: CMakeLists.txt  allRun.sh
vstar_great_impl/ut/: CMakeLists.txt  TestGreat.cpp  TestVstar.cpp  Utils.h  ci_run.sh
(+1253 files in other folders)
